# Haunted-House-Robotics-DMX

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  platformio.ini
.github/workflows/: ci.yml
01_animated_skeleton/: README.md
01_animated_skeleton/code/: AudioSync.cpp  AudioSync.h  Config.h  DMXController.cpp  DMXController.h  MotionDetector.cpp  MotionDetector.h  ServoController.cpp  ServoController.h  animated_skeleton.ino
02_motion_ghost/: README.md
02_motion_ghost/code/: Config.h  GhostMotion.cpp  GhostMotion.h  LightingController.cpp  LightingController.h  SensorManager.cpp  SensorManager.h  motion_ghost.ino
03_scare_experience_app/: README.md
03_scare_experience_app/app/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
combat_escape_room/: .env.example  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  escape_room_controller.js  package-lock.json  package.json
combat_escape_room/__tests__/: controller.test.js
docs/: .htmlvalidate.json  README.md  UPDATED_RESUME_Jose_Herrera.md  index.html  lighthouserc.json  package.json  roadmap.md  scare_experience_architecture.md  vite.config.ts
schematics/: animated_skeleton_wiring.md  motion_ghost_wiring.md
show_orchestrator/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
simulations/: README.md  console_demo.py  pyproject.toml
simulations/src/haunted_sim/: __init__.py  cli.py  core.py
simulations/src/haunted_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
simulations/tests/: test_cli.py
(+21 files in other folders)
